enum-derived/tests/rand/07-fail-for-tuple-enum.rs
use enum_derived::Rand;

#[derive(Rand)]
pub enum Messages {
    Email(Vec<u8>),
    Letter(String),
    Bill,
}

fn main() {}

